Created one pager with links

--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="en-GB">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
-    <p title="I'm a tooltip">This is a paragraph.</p>
-    <pre>
-      My Bonnie lies over the ocean.
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aydin Aksel Portfolio Site</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="light">
+  <div class="background">
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+    <div class="circle"></div>
+  </div>
 
-      My Bonnie lies over the sea.
+  <main>
+    <div class="portfolio__wrapper">
+      <div class="portfolio__container">
+        <h1 class="portfolio__title">Aydin Aksel</h1>
 
-      My Bonnie lies over the ocean.
+        <div class="portfolio__links">
+          <a class="portfolio__link" href="https://linkedin.com/in/aydinaksel" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a class="portfolio__link" href="https://github.com/aydinaksel" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a class="portfolio__link" href="https://trailhead.salesforce.com/me/aydinaksel" target="_blank" rel="noopener noreferrer">Salesforce Trailhead</a>
+        </div>
+      </div>
+    </div>
+  </main>
 
-      Oh, bring back my Bonnie to me.
-    </pre>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
+
