--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aydin Aksel Portfolio Site</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="smiley.png" />
 </head>
 <body class="light">
   <div class="background">
