--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 
 <body>
   <div class="background">
+    <!-->
     <div class="orb-1"></div>
     <div class="orb-2"></div>
     <div class="orb-3"></div>
     <div class="orb-4"></div>
     <div class="orb-5"></div>
+    <!-->
   </div>
 
   <div class="container">
     <header>
       <h1>Aydin Aksel</h1>
-      <h2>My Experience</h2>
+      <h2>Platforms and Tools I Use</h2>
     </header>
 
     <main>
@@ -31,7 +33,7 @@
     </main>
 
     <footer>
-      <p>© <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
+      <p>&#169; <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
     </footer>
   </div>
 
