Changed the background once again.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 
 <body>
   <div class="background">
-    <!-->
-    <div class="orb-1"></div>
-    <div class="orb-2"></div>
-    <div class="orb-3"></div>
-    <div class="orb-4"></div>
-    <div class="orb-5"></div>
-    <!-->
+    <div class="blob"></div>
+    <div class="blob"></div>
+    <div class="blob"></div>
+    <div class="blob"></div>
+    <div class="blob"></div>
   </div>
 
   <div class="container">
@@ -27,14 +25,21 @@
     </header>
 
     <main>
-      <div class="app-grid" id="app-grid">
-        <!-- Injected with JavaScript -->
-      </div>
+      <div class="app-grid" id="app-grid"></div>
     </main>
 
+
     <footer>
+      <ul class="social-links">
+        <li><a href="https://www.linkedin.com/in/aydinaksel" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+        </li>
+        <li><a href="https://www.salesforce.com/trailblazer/aydinaksel" target="_blank"
+            rel="noopener noreferrer">Trailhead</a></li>
+        <li><a href="https://www.github.com/aydinaksel" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+      </ul>
       <p>&#169; <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
     </footer>
+
   </div>
 
   <script src="js/main.js"></script>
