--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aydin's Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/animations.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <div class="blob"></div>
   </div>
 
-  <div class="container">
+  <div class="content">
     <header>
       <h1>Aydin Aksel</h1>
       <h2>Platforms and Tools I Use</h2>
@@ -36,7 +37,6 @@
       </ul>
       <p>&#169; <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
     </footer>
-
   </div>
 
   <script src="js/main.js"></script>
