Added contact page and blog page

--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aydin's Portfolio</title>
+  <title>n8n</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/animations.css">
@@ -19,23 +19,21 @@
 
   <div class="content">
     <header>
-      <h1>Aydin Aksel</h1>
-      <h2>Tools of My Trade</h2>
+      <h1>n8n</h1>
     </header>
 
     <main>
-      <div class="app-grid" id="app-grid"></div>
+      <div class="blog-grid"></div>
     </main>
 
     <footer>
       <ul class="social-links">
+        <li><a href="/">Home</a></li>
         <li><a href="https://www.linkedin.com/in/aydinaksel" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </li>
         <li><a href="https://www.salesforce.com/trailblazer/aydinaksel" target="_blank"
             rel="noopener noreferrer">Trailhead</a></li>
         <li><a href="https://www.github.com/aydinaksel" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <li><a href="./blogs.html">Blogs</a></li>
-        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <p>&#169; <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
     </footer>
