--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aydin's Portfolio</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/animations.css">
@@ -19,23 +19,40 @@
 
   <div class="content">
     <header>
-      <h1>Aydin Aksel</h1>
-      <h2>Tools of My Trade</h2>
+      <h1>Contact Me</h1>
     </header>
 
     <main>
-      <div class="app-grid" id="app-grid"></div>
+      <form id="contactForm">
+        <div class="form-group">
+          <input type="text" max="80" id="name" placeholder=" " value="aydin" required>
+          <label for="name">Name</label>
+        </div>
+        <div class="form-group">
+          <input type="email" max="80" id="email" placeholder=" " value="aydin@thing.com" required>
+          <label for="email">Email</label>
+        </div>
+        <div class="form-group full-width">
+          <textarea id="message" maxlength="255" rows="5" placeholder=" " required>Hey!</textarea>
+          <label for="message">Your Message</label>
+        </div>
+        <div class="form-group centered">
+          <button type="submit" id="submitButton">
+            Submit
+          </button>
+        </div>
+      </form>
     </main>
 
     <footer>
       <ul class="social-links">
+        <li><a href="/">Home</a></li>
         <li><a href="https://www.linkedin.com/in/aydinaksel" target="_blank" rel="noopener noreferrer">LinkedIn</a>
         </li>
         <li><a href="https://www.salesforce.com/trailblazer/aydinaksel" target="_blank"
             rel="noopener noreferrer">Trailhead</a></li>
         <li><a href="https://www.github.com/aydinaksel" target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a href="./blogs.html">Blogs</a></li>
-        <li><a href="./contact.html">Contact</a></li>
       </ul>
       <p>&#169; <span id="currentYear"></span> Aydin Aksel • Built with vibes</p>
     </footer>
