--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,15 @@
     <main>
       <form id="contactForm">
         <div class="form-group">
-          <input type="text" max="80" id="name" placeholder=" " value="aydin" required>
+          <input type="text" max="80" id="name" placeholder=" " required>
           <label for="name">Name</label>
         </div>
         <div class="form-group">
-          <input type="email" max="80" id="email" placeholder=" " value="aydin@thing.com" required>
+          <input type="email" max="80" id="email" placeholder=" " required>
           <label for="email">Email</label>
         </div>
         <div class="form-group full-width">
-          <textarea id="message" maxlength="255" rows="5" placeholder=" " required>Hey!</textarea>
+          <textarea id="message" maxlength="255" rows="5" placeholder=" " required></textarea>
           <label for="message">Your Message</label>
         </div>
         <div class="form-group centered">
